Melhorando textos justificados e inclusão de novos membros nas equipes.

--- a/templates/content/pt-br/equipe.html
+++ b/templates/content/pt-br/equipe.html
@@ -100,7 +100,7 @@
 <div class="item">
   <h3>Diogo Silva</h3>
   <img src="{{static_url}}/images/equipe/Diogo.jpeg"/>
-  <p align="justify"> É graduando em Análise e Desenvolvimento de Sistemas pela Universidade Estácio de Sá. Sua experiência está relacionada ao desenvolvimento de portais e aplicações para internet e servidores, a análise e modelagem de sistemas e processos, utilizando tecnologias e ferramentas de código livre (opensource). No CNCFlora desempenha a função de analista do Núcleo Sistemas, onde é responsável pela criação e desenvolvimento do portal CNCFlora, desenvolvimento de sistemas, informatização, implementação e gerenciamento de dados e infraestrutura de tecnologia.<br/><br/>
+  <p align="justify"> É graduando em Análise e Desenvolvimento de Sistemas pela Universidade Estácio de Sá. Sua experiência está relacionada ao desenvolvimento de portais e aplicações para internet e servidores, a análise e modelagem de sistemas e processos, utilizando tecnologias e ferramentas de código livre (opensource). No CNCFlora desempenha a função de analista do Núcleo Sistemas, onde é responsável pela criação e desenvolvimento do portal CNCFlora, desenvolvimento de sistemas, informatização, implementação e gerenciamento de dados e infraestrutura de tecnologia.<br/><br/><br/><br/><br/>
   <strong>Email:</strong> diogo@cncflora.net
   </p>
 </div>
@@ -153,7 +153,7 @@
 <div class="item">
   <h3>Lucas Moraes</h3>
   <img src="{{static_url}}/images/equipe/Lucas_moraes.jpeg"/>
-  <p align="justify"> É biólogo (bacharel em Genética), mestrando em Genética pela Universidade Federal do Rio de Janeiro - UFRJ. Sua experiência concentra-se nas áreas de evolução molecular, filogenética, filogeografia, fotografia e edição de imagens. No CNCFlora desempenha a função de analista do Núcleo Lista Vermelha, participando de todos os processos envolvidos na análise de dados e avaliação de risco de extinção da flora brasileira, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é curador do banco de imagens e responsável pelos registros fotográficos durante as oficinas, reuniões e expedições à campo.<br/><br/><br/><br/>
+  <p align="justify"> É biólogo (bacharel em Genética), mestrando em Genética pela Universidade Federal do Rio de Janeiro - UFRJ. Sua experiência concentra-se nas áreas de evolução molecular, filogenética, filogeografia, fotografia e edição de imagens. No CNCFlora desempenha a função de analista do Núcleo Lista Vermelha, participando de todos os processos envolvidos na análise de dados e avaliação de risco de extinção da flora brasileira, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é curador do banco de imagens e responsável pelos registros fotográficos durante as oficinas, reuniões e expedições à campo. Lucas adora fotografar, tomar cerveja e falar sobre os grandes mistérios da humanidade! <br/><br/><br/><br/>
   <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4407910Y7" target="_blank">Currículo lattes</a></strong><br/>
   <strong>Email:</strong> lucasmoraes@cncflora.net
   </p>
@@ -180,7 +180,7 @@
 <div class="item">
   <h3>Melissa Bocayuva</h3>
   <img src="{{static_url}}/images/equipe/feminino.png"/>
-  <p align="justify"> É bióloga, doutora em Botânica pela Universidade Federal de Viçosa - UFV (2012) com pós-doutorado pela mesma universidade. Sua experiência concentra-se na área de botânica e microbiologia, com ênfase em taxonomia, ecologia e conservação de Orchidaceae, biologia e fisiologia dos microrganismos. No CNCFlora desempenha a função de analista do Núcleo Planejamento de Ações, participando de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Também participa de expedições à campo para coletar material botânico, identificar e registrar as ameaças incidentes sobre a flora.
+  <p align="justify"> É bióloga, doutora em Botânica pela Universidade Federal de Viçosa - UFV (2012) com pós-doutorado pela mesma universidade. Sua experiência concentra-se na área de botânica e microbiologia, com ênfase em taxonomia, ecologia e conservação de Orchidaceae, biologia e fisiologia dos microrganismos. No CNCFlora desempenha a função de analista do Núcleo Planejamento de Ações, participando de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Também participa de expedições à campo para coletar material botânico, identificar e registrar as ameaças incidentes sobre a flora. Melissa adora viajar, conhecer parques, plantar e curtir a natureza!
   <br /><br /><br/>
     <strong><a href="http://lattes.cnpq.br/7249624264500739" target="_blank">Currículo lattes</a></strong><br/>
     <strong>Email:</strong> melissa@cncflora.net
