--- a/templates/content/pt-br/listavermelha.html
+++ b/templates/content/pt-br/listavermelha.html
@@ -1,24 +1,24 @@
 <div class="">
 <h3>Lista Vermelha</h3>
-<p>A lista vermelha consiste no produto final do trabalho executado pelo <a href="{{base_url}}/pt-br/projetos/lista-vermelha">“Projeto Lista Vermelha”</a>
+<p align="justify">A lista vermelha consiste no produto final do trabalho executado pelo <a href="{{base_url}}/pt-br/projetos/lista-vermelha">“Projeto Lista Vermelha”</a>
   em parceria com a rede de especialistas botânicos. Aqui
   podem ser consultadas todas as fichas de análise e avaliação de risco de extinção para as
   espécies que já foram avaliadas, por família.</p>
 
-  <p>Nela cada uma das espécies está classificada em uma das 8 categorias de risco de extinção,
+  <p align="justify">Nela cada uma das espécies está classificada em uma das 8 categorias de risco de extinção,
   estando também apresentados os <a href="http://cncflora.jbrj.gov.br/portal/static/pdf/documentos/Sumario_Categorias_IUCN.pdf">critérios e subcritérios </a> utilizados durante a avaliação.</p>
-  <p>As espécies podem ser categorizadas como:</p>
+  <p align="justify">As espécies podem ser categorizadas como:</p>
   <p>
   <strong>“Criticamente em Perigo”</strong> <span class="category item-red-list CR"> CR</span><br/>
   Quando as melhores evidências disponíveis indicam atender qualquer dos critérios A a E para
   “CR”. São espécies que estão enfrentando um risco extremamente elevado de extinção na
   natureza.</p>
 
-  <p><strong>“Em perigo”</strong> <span class="category item-red-list EN"> EN</span><br/><br/>
+  <p align="justify"><strong>“Em perigo”</strong> <span class="category item-red-list EN"> EN</span><br/><br/>
   Quando as melhores evidências disponíveis indicam atender qualquer dos critérios A a E para
   “EN”. São espécies que enfrentam um risco muito elevado de extinção na natureza.</p>
 
-  <p><strong>“Vulnerável”</strong> <span class="category item-red-list VU"> VU</span><br/>
+  <p align="justify"><strong>“Vulnerável”</strong> <span class="category item-red-list VU"> VU</span><br/>
   Quando as melhores evidências disponíveis indicam atender qualquer dos critérios A a E para
   “VU”. São espécies que enfrentam um risco de extinção elevado na natureza.</p>
 
@@ -26,18 +26,18 @@
   Espécies que no momento não se qualificam como ameaçadas, mas estão perto ou suscetíveis
   de serem qualificadas em uma categoria de ameaça num futuro próximo.</p>
 
-  <p><strong>“Menos preocupante”</strong> <span class="category item-red-list LC"> LC</span><br/>
+  <p align="justify"><strong>“Menos preocupante”</strong> <span class="category item-red-list LC"> LC</span><br/>
   Espécies que no momento não se qualificam como ameaçadas. São incluídas nesta categoria
   espécies abundantes e amplamente distribuídas.</p>
 
-  <p><strong>“Dados insuficientes”</strong> <span class="category item-red-list DD"> DD</span><br/>
+  <p align="justify"><strong>“Dados insuficientes”</strong> <span class="category item-red-list DD"> DD</span><br/>
   Espécies que não possuem informações suficientes para sua categorização de risco de extinção
   baseada na distribuição e/ou status populacional. Uma espécie nesta categoria pode ser bem
   estudada, mas com deficiência de dados de abundância e/ou distribuição.</p>
 
-  <p><strong>“Extinta” </strong> <span class="category item-red-list EX"> EX</span><br/>
+  <p align="justify"><strong>“Extinta” </strong> <span class="category item-red-list EX"> EX</span><br/>
   Quando não restam quaisquer dúvidas de que o último indivíduo de um táxon morreu.</p>
 
-  <p><strong>“Extinta na natureza”</strong> <span class="category item-red-list EW"> EW</span><br/>
+  <p align="justify"><strong>“Extinta na natureza”</strong> <span class="category item-red-list EW"> EW</span><br/>
   Quando um táxon sobrevive apenas em cultivo, cativeiro ou apenas com uma população (ou
   subpopulações) naturalizada fora de sua área de distribuição original.</p></div>
