--- a/templates/content/pt-br/project/index.html
+++ b/templates/content/pt-br/project/index.html
@@ -3,7 +3,7 @@
 
   <div class="description col-sm-12 col-md-12 col-lg-12">
     <h4><a href="{{base_url}}/pt-br/projetos/lista-vermelha">Lista Vermelha</a></h4>
-    <p>
+    <p align="justify">
         Dentre as atribuições do CNCFlora está a de avaliar o risco de extinção de
         espécies da flora do Brasil, até o ano de 2020, para atender a meta 2 da
         <a href="http://www.cbd.int/gspc/" target="_blank">“Estratégia Global de Conservação de Plantas”</a>. Listas vermelhas constituem uma ferramenta
@@ -15,7 +15,7 @@
 <div class="box-section box-project ">
   <div class="description col-sm-12 col-md-12 col-lg-12">
     <h4><a href="{{base_url}}/pt-br/projetos/planejamento-de-acoes">Planejamento de Ações</a></h4>
-    <p>
+    <p align="justify">
       O planejamento de ações para a conservação da flora é a etapa seguinte à avaliação do risco de extinção das espécies. Após a elaboração de uma lista de espécies ameaçadas, torna-se necessário o planejamento e a implementação de ações que visem a retirada das espécies da lista.
     </p>
   </div>
@@ -23,7 +23,7 @@
 <div class="box-section box-project ">
   <div class="description col-sm-12 col-md-12 col-lg-12">
     <h4><a href="{{base_url}}/pt-br/projetos/areas-prioritarias">Planejamento Espacial para Conservação</a></h4>
-    <p>
+    <p align="justify">
     O Núcleo Planejamento Espacial para Conservação tem um papel central na definição de áreas prioritárias tanto em âmbito nacional, quanto regionalmente. A equipe do núcleo é responsável pela definição das áreas prioritárias para conservação e uso sustentável da flora ameaçada do Brasil, assim como pela execução de todas as análises espaciais e definição de prioridades para o planejamento de ações nos Planos de Ação Nacional (PANs) elaborados pelo CNCFlora.
     </p>
   </div>
@@ -32,8 +32,8 @@
 
   <div class="description col-sm-12 col-md-12 col-lg-12">
     <h4><a href="{{base_url}}/pt-br/projetos/ex-situ">Ex-situ</a></h4>
-    <p>
-    O Projeto Ex Situ é dedicado às plantas ameaçadas da flora brasileira e atua a partir de duas linhas de ação conexas: o aprimoramento e a ampliação das coleções ex situ de espécies ameaçadas e a integração das ações ex situ aos esforços de conservação integrada. Na primeira linha, o foco é em fortalecer as coleções e as instituições que as mantêm. A segunda linha de ação visa a otimização do uso dos recursos e das coleções ex situ para a conservação in situ. O objetivo fundamental do projeto é evitar e reverter os processos de extinção da flora, através da conservação de germoplasma em coleções de plantas cultivadas, bancos de sementes, criopreservação e cultura em vitro, e da reintrodução das espécies em seus ambientes naturais. 
+    <p align="justify">
+    O Projeto Ex Situ é dedicado às plantas ameaçadas da flora brasileira e atua a partir de duas linhas de ação conexas: o aprimoramento e a ampliação das coleções ex situ de espécies ameaçadas e a integração das ações ex situ aos esforços de conservação integrada. Na primeira linha, o foco é em fortalecer as coleções e as instituições que as mantêm. A segunda linha de ação visa a otimização do uso dos recursos e das coleções ex situ para a conservação in situ. O objetivo fundamental do projeto é evitar e reverter os processos de extinção da flora, através da conservação de germoplasma em coleções de plantas cultivadas, bancos de sementes, criopreservação e cultura em vitro, e da reintrodução das espécies em seus ambientes naturais.
     </p>
   </div>
 </div>
@@ -41,10 +41,10 @@
 
   <div class="description col-sm-12 col-md-12 col-lg-12">
     <h4><a href="{{base_url}}/pt-br/projetos/sistemas">Sistemas</a></h4>
-    <p>
-    
+    <p align="justify">
+
     O Centro Nacional de Conservação da Flora (CNCFlora) tem a missão de fornecer, ao Ministério do Meio Ambiente e a outras instâncias do governo brasileiro, informação técnica e científica para nortear decisões políticas relacionadas à conservação da flora brasileira.
-    
+
     Para tanto planejou-se a criação de um sistema de informação para o apoio e habilitação do complexo trabalho a ser desenvolvido, dada a escala da flora do Brasil. Tendo essa escala em vista, um sistema pensando em toda a rede de participação e flora do Brasil poderia também ser escalado a rede e flora mundiais.
    </p>
   </div>
