--- a/templates/content/pt-br/project/lista-vermelha.html
+++ b/templates/content/pt-br/project/lista-vermelha.html
@@ -1,14 +1,14 @@
 <h3>Núcleo Lista Vermelha</h3>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
   <div class="banner-full"><img src="{{static_url}}/images/projetos/lista-vermelha/vermelha.jpg" /></div>
-  <p>Dentre as atribuições do CNCFlora está a de avaliar o risco de extinção de
+  <p align="justify">Dentre as atribuições do CNCFlora está a de avaliar o risco de extinção de
     espécies da flora do Brasil, até o ano de 2020, para atender a meta 2 da
     <a href="http://www.cbd.int/gspc/">“Estratégia Global de Conservação de Plantas”</a>.
     Listas vermelhas constituem uma ferramenta
     importante para a priorização de investimentos na conservação de espécies e
     também demandam muitos recursos para sua construção e atualização .</p>
 
-  <p>Esta importante tarefa é executada pelo “Núcleo Lista Vermelha”, que conta
+  <p align="justify">Esta importante tarefa é executada pelo “Núcleo Lista Vermelha”, que conta
     com uma equipe composta por profissionais formados em diferentes áreas
     ligadas às ciências da natureza, e treinados no uso dos critérios e categorias
     da <a href="http://www.iucnredlist.org/">União Internacional para Conservação da Natureza</a>.
@@ -17,11 +17,11 @@
     pela equipe e contribuem para a consistência das avaliações de risco de
     extinção.</p>
 
-  <p>O fluxo de trabalho adotado pela equipe, conta com um sistema de
+  <p align="justify">O fluxo de trabalho adotado pela equipe, conta com um sistema de
     informações online, desenvolvido especificamente para o processo de
     avaliação de risco de extinção possui três etapas básicas:</p>
 
-  <p>A etapa de “Análise de dados”, onde ocorre a compilação dos dados das
+  <p align="justify">A etapa de “Análise de dados”, onde ocorre a compilação dos dados das
     espécies, no perfil on-line de cada uma. São levantadas informações sobre a
     biologia,ecologia e distribuição de cada espécie, além de dados de ameaças e
     ações de conservação. Em seguida, durante a etapa de “Validação” os dados
@@ -31,12 +31,12 @@
     analistas do Núcleo Lista Vermelha, que incorporam todas as alterações
     indicadas pelos especialistas.</p>
 
-  <p>Com o conhecimento gerado, inicia-se o processo de “Avaliação de risco de
+  <p align="justify">Com o conhecimento gerado, inicia-se o processo de “Avaliação de risco de
     extinção” das espécies, seguindo o sistema de <a href="http://www.iucnredlist.org/documents/2001RedListCats_Crit_Portugu%C3%AAs.pdf">categorias e critérios</a> (versão
     3.1) estabelecidos pela IUCN. Durante essa etapa, as espécies são categorizadas em uma das
     categorias de risco de extinção:</p>
   <div class="banner-medium"><img src="{{static_url}}/images/projetos/lista-vermelha/unnamed.png" /></div><br/>
-  <p>Quando as avaliações são concluídas elas são disponibilizadas novamente aos
+  <p align="justify">Quando as avaliações são concluídas elas são disponibilizadas novamente aos
     especialistas colaboradores, que podem enviar críticas e sugestões a respeito
     das avaliações realizadas. Posteriormente, as avaliações são publicadas no
     <a href="http://localhost:8889/pt-br/listavermelha">portal</a> e enviadas ao <a href="http://www.mma.gov.br/">Ministério do Meio
@@ -229,13 +229,13 @@
         <strong><a href="http://lattes.cnpq.br/9726906288362684" target="_blank">Currículo lattes</a></strong><br />
         <strong>Email:</strong> caiobg@cncflora.net<br/>
         </p>
-    </div>  
+    </div>
 
     <div class="item">
       <img src="{{static_url}}/images/equipe/Lucas_moraes.jpeg"/>
       <p align="justify"><strong>Lucas Moraes</strong>
-       é biólogo (bacharel em Genética), mestrando em Genética pela Universidade Federal do Rio de Janeiro - UFRJ. Sua experiência concentra-se nas áreas de evolução molecular, filogenética, filogeografia, fotografia e edição de imagens. No CNCFlora desempenha a função de analista do Núcleo Lista Vermelha, participando de todos os processos envolvidos na análise de dados e avaliação de risco de extinção da flora brasileira, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é curador do banco de imagens e responsável pelos registros fotográficos durante as oficinas, reuniões e expedições à campo.<br/><br/>
-      <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4407910Y7" target="_blank">Currículo lattes</a></strong><br/>
+       é biólogo (bacharel em Genética), mestrando em Genética pela Universidade Federal do Rio de Janeiro - UFRJ. Sua experiência concentra-se nas áreas de evolução molecular, filogenética, filogeografia, fotografia e edição de imagens. No CNCFlora desempenha a função de analista do Núcleo Lista Vermelha, participando de todos os processos envolvidos na análise de dados e avaliação de risco de extinção da flora brasileira, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Ele ainda é curador do banco de imagens e responsável pelos registros fotográficos durante as oficinas, reuniões e expedições à campo. Lucas adora fotografar, tomar cerveja e falar sobre os grandes mistérios da humanidade!<br/>
+       <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4407910Y7" target="_blank">Currículo lattes</a></strong><br/>
       <strong>Email:</strong> lucasmoraes@cncflora.net
       </p>
     </div>
