--- a/templates/content/pt-br/project/planejamento-de-acoes.html
+++ b/templates/content/pt-br/project/planejamento-de-acoes.html
@@ -1,11 +1,11 @@
 <h3>Núcleo Planejamento de Ações</h3>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
     <div class="banner-full"><img src="{{static_url}}/images/projetos/planejamento/cerrado.jpg" /></div>
-    <p>O planejamento de ações para a conservação da flora é a etapa seguinte à avaliação do risco de extinção das espécies. Após a elaboração de uma lista de espécies ameaçadas, torna-se necessário o planejamento e a implementação de ações que visem a retirada das espécies da lista.</p>
-    <p>
+    <p align="justify">O planejamento de ações para a conservação da flora é a etapa seguinte à avaliação do risco de extinção das espécies. Após a elaboração de uma lista de espécies ameaçadas, torna-se necessário o planejamento e a implementação de ações que visem a retirada das espécies da lista.</p>
+    <p align="justify">
     De acordo com a Portaria nº 43 de 31 de Janeiro de 2014, é atribuído ao Jardim Botânico do Rio de Janeiro/CNCFlora a responsabilidade de elaborar e publicar Planos de Ação Nacional (PANs) para todas as espécies da flora ameaçadas de extinção. Diante deste enorme desafio, o CNCFlora/JBRJ conduz o processo de elaboração, implementação e monitoramento dos PANs. O principal foco dos PANs elaborados pelo CNCFlora/JBRJ é em uma abordagem territorial para combater e mitigar as ameaças incidentes nas áreas, e nas populações de todas as espécies com ocorrência no território abordado. Os PANs direcionados para uma única espécie também podem ser elaborados, desde que haja estudos suficientes que possam embasar o planejamento das ações e justificar o investimento de recursos e esforços.
     </p>
-    <p><div class="banner-m"><img src="{{static_url}}/images/projetos/planejamento/DSCN1326.jpg" /></div>
+    <p align="justify"><div class="banner-m"><img src="{{static_url}}/images/projetos/planejamento/DSCN1326.jpg" /></div>
     A elaboração dos PANs segue a ideia central de planejamento estratégico apresentado por SSC/IUCN (2008), Environment Canada (2003), NMFS (2004), Driver et al. (2009), sendo compostos de duas partes. A primeira, contém uma compilação da melhor informação disponível sobre as espécies e área alvo do PAN, além da descrição das ameaças incidentes. A segunda é o plano de ação propriamente dito, o qual é construído e consolidado de forma participativa, reunindo pessoas de diversos setores da sociedade com conhecimento sobre as espécies e área. De modo que, as ações possam ser direcionadas à realidade local e factíveis de serem implementadas e monitoradas.
     </p>
     <!--
@@ -25,7 +25,7 @@
             <img src="{{static_url}}/images/projetos/planejamento/PAN-Espinhaco-Meridional.jpg"/>
           <div class="portfolio-overlay">
             <br/>
-            <p>Plano de Ação Nacional para a conservação da flora ameaçada de extinção da Serra do Espinhaço Meridional
+            <p align="justify">Plano de Ação Nacional para a conservação da flora ameaçada de extinção da Serra do Espinhaço Meridional
             <!--<br><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_PAN_Espinhaco Meridional.pdf" style="color:blue" target="_blank">Anexos</a>-->
             </p>
 
@@ -40,7 +40,7 @@
             <img src="{{static_url}}/images/projetos/planejamento/Capa-PAN-Grao-Mogol.jpg"/>
           <div class="portfolio-overlay">
             <br/>
-            <p>Plano de Ação Nacional para a conservação da flora ameaçada de extinção da região de Grão Mogol - Francisco Sá
+            <p align="justify">Plano de Ação Nacional para a conservação da flora ameaçada de extinção da região de Grão Mogol - Francisco Sá
             <!--<br><a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/Anexos_Grao Mogol.pdf" style="color:blue" target="_blank">Anexos</a>-->
             </p>
 
@@ -54,7 +54,7 @@
             <img src="{{static_url}}/images/projetos/planejamento/Guia-de-Campo.jpg"/>
           <div class="portfolio-overlay">
             <br/>
-            <p>Flora ameaçada do Cerrado Mineiro - Guia de Campo
+            <p align="justify">Flora ameaçada do Cerrado Mineiro - Guia de Campo
             </p>
 
           </div>
@@ -66,7 +66,7 @@
         <a href="http://cncflora.jbrj.gov.br/arquivos/arquivos/pdfs/PAN_Faveiro-de-Wilson.pdf">
           <img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg"/>
           <div class="portfolio-overlay">
-            <p><br /> PAN Faveiro de Wilson</p>
+            <p align="justify"><br /> PAN Faveiro de Wilson</p>
           </div>
         </a>
       </div>
@@ -76,7 +76,7 @@
         <a href=""  data-toggle="modal" data-target="#breve-three">
           <div class="portfolio-overlay">
             <br/>
-            <p>Em Breve<br/><br/>
+            <p align="justify">Em Breve<br/><br/>
             Plano de Ação Nacional para a conservação da flora ameaçada de extinção da Bacia do Alto Tocantins
             </p>
 
@@ -89,7 +89,7 @@
           <a href="" data-toggle="modal" data-target="#breve-five" >
           <div class="portfolio-overlay">
             <br/>
-            <p>Em Breve<br/><br/>
+            <p align="justify">Em Breve<br/><br/>
               Protocolo de Campo. Diretrizes para coleta de dados</p>
 
           </div>
@@ -101,7 +101,7 @@
           <a href=""  data-toggle="modal" data-target="#breve-six">
           <div class="portfolio-overlay">
             <br/>
-            <p>Em Breve<br/><br/>
+            <p align="justify">Em Breve<br/><br/>
               Manual Operacional Planejamento de Açoes para Conservação da Flora Ameaçada de Extinção
             </p>
 
@@ -122,9 +122,9 @@
           <img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg"/>
           -->
           <div class="portfolio-overlay">
-            <p>
+            <p align="justify">
               <br />
-              Guia de<br /> 
+              Guia de<br />
               Validação de Ocorrências.
               </p>
           </div>
@@ -139,7 +139,7 @@
           <img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg"/>
           -->
           <div class="portfolio-overlay">
-            <p><br /> Modelo de <br /> Inserção de Ocorrências</p>
+            <p align="justify"><br /> Modelo de <br /> Inserção de Ocorrências</p>
           </div>
         </a>
       </div>
@@ -184,7 +184,7 @@
   <div class="item">
       <img src="{{static_url}}/images/equipe/feminino.png"/>
       <p align="justify"><strong>Melissa Bocayuva</strong>
-      é bióloga, doutora em Botânica pela Universidade Federal de Viçosa - UFV (2012) com pós-doutorado pela mesma universidade. Sua experiência concentra-se na área de botânica e microbiologia, com ênfase em taxonomia, ecologia e conservação de Orchidaceae, biologia e fisiologia dos microrganismos. No CNCFlora desempenha a função de analista do Núcleo Planejamento de Ações, participando de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Também participa de expedições à campo para coletar material botânico, identificar e registrar as ameaças incidentes sobre a flora.
+      é bióloga, doutora em Botânica pela Universidade Federal de Viçosa - UFV (2012) com pós-doutorado pela mesma universidade. Sua experiência concentra-se na área de botânica e microbiologia, com ênfase em taxonomia, ecologia e conservação de Orchidaceae, biologia e fisiologia dos microrganismos. No CNCFlora desempenha a função de analista do Núcleo Planejamento de Ações, participando de todos os processos envolvidos na elaboração de estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Também participa de expedições à campo para coletar material botânico, identificar e registrar as ameaças incidentes sobre a flora. Melissa adora viajar, conhecer parques, plantar e curtir a natureza!
         <br/>
         <strong>
           <a href="http://lattes.cnpq.br/7258510578751609" target="_blank">Currículo lattes</a>
@@ -198,6 +198,16 @@
       <img src="{{static_url}}/images/equipe/Nina.jpg"/>
       <p align="justify"><strong>Nina Pougy</strong>
       é bióloga (bacharel em Ecologia), mestranda em Práticas em Desenvolvimento Sustentável pela Universidade Federal Rural do Rio de Janeiro - UFRRJ. Sua experiência e interesses profissionais concentram-se na área de conservação da biodiversidade, com ênfase no desenvolvimento de estratégias para a conservação de plantas, planejamento espacial e geoprocessamento aplicado à biologia da conservação e planejamento participativo para a  gestão socioambiental. No CNCFlora desempenha a função de coordenadora do Núcleo Planejamento de Ações e participa de todos os processos envolvidos na elaboração de projetos e de estratégias de conservação para a flora ameaçada de extinção, da organização de eventos e de livros, da redação de artigos científicos e de documentos técnicos ou de divulgação científica. Também participa de expedições à campo para coletar material botânico, identificar e registrar as ameaças incidentes sobre a flora e organiza oficinas participativas para definir estratégia de conservação. Nina adora viajar, fazer programas ao ar livre, ir à praia, praticar Yoga, tomar banho de cachoeira e sair com os amigos!
+      <br />
+        <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4496488J9" target="_blank">Currículo lattes</a></strong><br/>
+        <strong>Email:</strong> nina@cncflora.net
+      </p>
+  </div>
+
+  <div class="item">
+      <img src="{{static_url}}/images/equipe/feminino.png"/>
+      <p align="justify"><strong>Polyana Mendes Nogueira</strong>
+      é engenheira florestal, mestranda na área de Biodiversidade em Unidades de Conservação pela Escola Nacional de Botânica Tropical - ENBT/JBRJ. Sua experiência está relacionada a geotecnologias aplicadas aos recursos naturais, licenciamento, execução e elaboração de projetos ambientais com foco na restauração florestal. No CNCFlora é pesquisadora colaboradora do Núcleo Planejamento de Ações, onde participa da elaboração de estratégias de conservação para a flora ameaçada de extinção. Poly adora estar em contato com a natureza, tomar banho de cachoeira, fazer trilhas, conhecer novos lugares e encontrar os amigos!
       <br />
         <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4496488J9" target="_blank">Currículo lattes</a></strong><br/>
         <strong>Email:</strong> nina@cncflora.net
