--- a/templates/content/pt-br/project/sistemas.html
+++ b/templates/content/pt-br/project/sistemas.html
@@ -1,9 +1,9 @@
 <h3>Núcleo Sistemas</h3>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
-<p>
+<p align="justify">
 O Centro Nacional de Conservação da Flora (CNCFlora) tem a missão de fornecer, ao Ministério do Meio Ambiente e a outras instâncias do governo brasileiro, informação técnica e científica para nortear decisões políticas relacionadas à conservação da flora brasileira.
 </p>
-<p>
+<p align="justify">
 Para tanto planejou-se a criação de um sistema de informação para o apoio e habilitação do complexo trabalho a ser desenvolvido, dada a escala da flora do Brasil. Tendo essa escala em vista, um sistema pensando em toda a rede de participação e flora do Brasil poderia também ser escalado a rede e flora mundiais.
 </p>
 </div>
@@ -12,7 +12,7 @@ Para tanto planejou-se a criação de um sistema de informação para o apoio e 
   <div class="slide-equipe" class="col-sm-12 col-md-12 col-lg-12">
       <div class="item">
         <img src="{{static_url}}/images/equipe/Diogo.jpeg"/>
-        <p align="justify"><strong>Diogo Silva</strong> 
+        <p align="justify"><strong>Diogo Silva</strong>
           é graduando em Análise e Desenvolvimento de Sistemas pela Universidade Estácio de Sá. Sua experiência está relacionada ao desenvolvimento de portais e aplicações para internet e servidores, a análise e modelagem de sistemas e processos, utilizando tecnologias e ferramentas de código livre (opensource). No CNCFlora desempenha a função de analista do Núcleo Sistemas, onde é responsável pela criação e desenvolvimento do portal CNCFlora, desenvolvimento de sistemas, informatização, implementação e gerenciamento de dados e infraestrutura de tecnologia.<br/><br/>
           <strong>Email:</strong> diogo@cncflora.net
         </p>
@@ -20,7 +20,7 @@ Para tanto planejou-se a criação de um sistema de informação para o apoio e 
 
       <div class="item">
         <img src="{{static_url}}/images/equipe/Eduardo.jpeg"/>
-        <p align="justify"><strong>Eduardo Dalcin</strong> 
+        <p align="justify"><strong>Eduardo Dalcin</strong>
           é biólogo, doutor em Informática na Biodiversidade pela University of Southampton (2005). É membro do comitê técnico-científico do Sistema de Informação sobre a Biodiversidade Brasileira (SiBBr) do MCTI; do Grupo Técnico da Flora do Mundo Online, meta da GSPC para 2020; do “Informal Advisory Committee” do “Clearing-House Mechanism” da CBD; do Comitê Executivo da iniciativa “Biodiversity Standards” (TDWG) e ainda do “GBIF Task Force on Accelerating the Discovery of Bio-collections Data”. Participa do Intergovernmental Science-Policy Platform on Biodiversity and Ecosystem Services (IPBES) como membro o “Task Force on Knowledge and Data”; e representa o JBRJ junto ao PainelBio. Sua experiência e interesses profissionais estão relacionados com: gestão de informação em biodiversidade, governança de dados em biodiversidade, bancos de dados taxonômicos; e qualidade, análise e visualização de dados sobre biodiversidade.<br/>
           <strong><a href="http://lattes.dalcin.org" target="_blank">Currículo lattes</a></strong><br/>
           <strong>Email:</strong> edalcin@jbrj.org</p>
